# verify-runtime

./: .gitignore  .markdownlint.json  CLAUDE.md  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLUGIN_SDK.md
verify_runtime/: __init__.py  ai.py  annotations.py  cli.py  core.py  dashboard.py  history.py  resolver.py  selftest.py  yaml.py
verify_runtime/evaluators/: ai.py  build.py  lint.py  meta.py  performance.py  security.py  tests.py
verify_runtime/tests/: _bootstrap.py  test_annotations.py  test_cli_doctor.py  test_cli_github_annotations.py  test_cli_history.py  test_cli_html.py  test_cli_init.py  test_cli_plugins.py  test_dashboard.py  test_evaluators.py  test_history.py  test_remediation.py  test_resolver.py  test_scoring.py  test_selftest.py  test_yaml.py
