[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verify-runtime"
version = "1.0.0"
description = "Verification-Driven Development runtime: config-driven quality gate engine + generic evaluators."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
verify = "verify_runtime.cli:main"

[project.entry-points."verify.selftests"]
runtime = "verify_runtime.selftest:run"

[tool.setuptools.packages.find]
include = ["verify_runtime*"]
